distorted fixed

--- a/css/mediaControl.css
+++ b/css/mediaControl.css
@@ -4,7 +4,7 @@
     }
 
     .imgPaddingForArrowLeft {
-        padding-left: 35%;
+        padding-left: 65px;
     }
 
     .ucFontSetting1 {
